force-app/main/default/objects/Compliance_Docs__c/Compliance_Docs__c.object-meta.xml
<CustomObject>
    <label>Compliance Docs</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Record ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>