force-app/main/default/objects/Compliance_Docs__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; WD_Asset__r.Asset_Record_ID__c , WD_Asset__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Asset Component &gt; Asset</inlineHelpText>
    <label>Asset</label>
    <type>Text</type>
</CustomField>