force-app/main/default/objects/Compliance_Docs__c/fields/CD_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Name__c</fullName>
    <formula>Name__c &amp;&quot; - &quot;&amp; RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Asset Component &gt; Type</inlineHelpText>
    <label>Name (formula)</label>
    <type>Text</type>
</CustomField>