force-app/main/default/objects/Compliance_Docs__c/fields/Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_No__c</fullName>
    <label>Certificate No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>