force-app/main/default/objects/Compliance_Docs__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Cert Date</label>
    <type>Date</type>
</CustomField>