force-app/main/default/objects/Compliance_Docs__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate_COC</fullName>
                <label>Certificate (COC)</label>
            </value>
            <value>
                <fullName>Drawings</fullName>
            </value>
            <value>
                <fullName>Manual - Servicing</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Certificate of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>