force-app/main/default/objects/Compliance_Docs__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Asset Trailer may have a manifold on it which has OEM certification - therefore the Manifold should be listed as the Asset Component</description>
    <label>Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>