force-app/main/default/objects/Compliance_Docs__c/fields/Serial_ID__c.field-meta.xml
<CustomField>
    <fullName>Serial_ID__c</fullName>
    <label>Serial/ID #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>