force-app/main/default/objects/Compliance_Docs__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;   WD_Asset__r.Unit__r.Id,WD_Asset__r.Unit__r.Name  , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Asset &gt; Unit</inlineHelpText>
    <label>Unit</label>
    <type>Text</type>
</CustomField>