force-app/main/default/objects/Compliance_Docs__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Compliance Docs</relationshipLabel>
    <relationshipName>Compliance_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>