force-app/main/default/objects/Compliance_Docs__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <description>Certification OEM/COC</description>
    <label>Certification</label>
</RecordType>