force-app/main/default/objects/Compliance_Docs__c/recordTypes/COC.recordType-meta.xml
<RecordType>
    <fullName>COC</fullName>
    <active>true</active>
    <description>Certificate of Conformance</description>
    <label>COC</label>
</RecordType>