force-app/main/default/objects/Compliance_Docs__c/recordTypes/COS.recordType-meta.xml
<RecordType>
    <fullName>COS</fullName>
    <active>true</active>
    <description>Certificate of Service</description>
    <label>COS</label>
</RecordType>