force-app/main/default/objects/Compliance_Docs__c/recordTypes/Drawings.recordType-meta.xml
<RecordType>
    <fullName>Drawings</fullName>
    <active>true</active>
    <description>Drawings</description>
    <label>Drawings</label>
</RecordType>