force-app/main/default/objects/Compliance_Docs__c/recordTypes/Manual_Servicing.recordType-meta.xml
<RecordType>
    <fullName>Manual_Servicing</fullName>
    <active>true</active>
    <label>Manual - Servicing</label>
</RecordType>