force-app/main/default/objects/Compliance_Docs__c/recordTypes/Plant_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Plant_Risk_Assessment</fullName>
    <active>true</active>
    <label>Plant Risk Assessment</label>
</RecordType>