force-app/main/default/objects/Compliance_Docs__c/recordTypes/Register.recordType-meta.xml
<RecordType>
    <fullName>Register</fullName>
    <active>true</active>
    <description>Critical List</description>
    <label>Register</label>
</RecordType>