force-app/main/default/objects/Compliance_Docs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Type__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Certificate_COC</value>
    </filters>
    <label>All - Update</label>
</ListView>