force-app/main/default/objects/Compliance_Docs__c/listViews/R22_Compliance_Docs.listView-meta.xml
<ListView>
    <fullName>R22_Compliance_Docs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Type__c</columns>
    <columns>Name__c</columns>
    <columns>CD_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>22</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>contains</operation>
        <value>22</value>
    </filters>
    <label>R22 - Compliance Docs</label>
</ListView>