force-app/main/default/objects/Compliance_Docs__c/listViews/R26_Compliance_Docs.listView-meta.xml
<ListView>
    <fullName>R26_Compliance_Docs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Type__c</columns>
    <columns>Name__c</columns>
    <columns>CD_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>26</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>contains</operation>
        <value>26</value>
    </filters>
    <label>R26 - Compliance Docs</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Rig_26</group>
        <group>Safety</group>
    </sharedTo>
</ListView>